--- a/04_handle-html-dependencies-with-htmltools.Rmd
+++ b/04_handle-html-dependencies-with-htmltools.Rmd
@@ -2,139 +2,132 @@
 
 **Learning objectives:**
 
-* Familiarise ourselves on how to use the  `htmlDependency()` &  `attachDependencies()` to properly handle web dependencies in Shiny apps
-* Learn about the `findDependencies()`, `suppressDependencies()` and `resolveDependencies()` functions and understand when and why they are necessary in Shiny app development
+* How we can utilize {htmltools} manage web dependencies (CSS and JS).
+* Familiarize ourselves on how to use the  `htmlDependency()` &  `tagList()` to properly handle web dependencies in Shiny apps
+* Learn about the `findDependencies()`, `suppressDependencies()` and `resolveDependencies()` functions and understand when and why they are necessary in Shiny app development.
+
+<br>
+
+> This opens the doors to work with almost **any web framework**
 
 
-## Intro & Recap
+## Finding a card {-}
 
-In the last meeting we looked at what Shiny's dependencies are:
+We saw this card on __Material Design for Bootstrap (MDB)__ [documentation](https://mdbootstrap.com/docs/standard/components/cards/).
 
-* jQuery
-* shiny (custom JavaScript and CSS)
-* Bootstrap (JavaScript and CSS).
+![](image/04-handle-html-dependencies/01-mdb-card.png)
 
-This week we'll look at how to manage arbitrary dependencies and resolve conflicts. 
-
-But first, why would we want to do this?
-
-## Motivation
-
-Shiny's dependencies do a lot of work for us, for example if we generate a basic UI in shiny with R code:
-
-```{r, eval = FALSE}
-ui <- shiny::fluidPage(
-  shiny::fluidRow(
-    shiny::column(width = 2, shiny::textAreaInput("x", "Text Input")),
-    shiny::column(width = 1, shiny::actionButton("y", "Button"))
-  )
-)
-server <- function(input, output, session){
-}
-shiny::shinyApp(ui, server)
+```html
+<div class="card">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <button type="button" class="btn btn-primary" data-mdb-ripple-init>Button</button>
+  </div>
+</div>
 ```
 
-![with_shiny_dependencies](image/04_01_shiny_dependencies_i.png)
+## Wrapping html into a function {-}
 
-![without_shiny_depencies](image/04_02_no_shiny_dependencies.png)
+```html
+<div class="card">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <button type="button" class="btn btn-primary" data-mdb-ripple-init>Button</button>
+  </div>
+</div>
+```
 
-But what if we didn't want the help from Shiny, or we wanted to pick and choose the help we get. For example, we might not want the light blue glow around the text input box when it's clicked. We might want a different colour, or no glow at all.
-
-How do we do this?
-
-## Strategies for adding custom styling to Shiny apps:
-
-Let's say we wanted to edit the button's appearance to be green, say 'click me' and change colour when clicked.
-
-Approach 1 is to use inline HTML/CSS
-
-```{r, eval = FALSE}
+```{r}
 library(shiny)
 
-ui <- fluidPage(
-  tags$head(
-    tags$style(HTML("
-      /* Button style */
-      .my-btn {
-        background-color: #4CAF50; /* Green background */
-        border: none; /* Remove border */
-        color: white; /* White text */
-        padding: 12px 24px; /* Some padding */
-        text-align: center; /* Center text */
-        text-decoration: none; /* Remove underline */
-        display: inline-block; /* Make it an inline element */
-        font-size: 16px; /* Increase font size */
-        cursor: pointer; /* Add cursor on hover */
-        border-radius: 5px; /* Add rounded corners */
-      }
-      
-      /* Button hover style */
-      .my-btn:hover {
-        background-color: #3e8e41; /* Dark green background on hover */
-      }
-    "))
-  ),
-  
-  # Button with custom class
-  actionButton(inputId = "my-btn", label = "Click me!", class = "my-btn")
-)
-
-server <- function(input, output) {
-  # Do something when button is clicked
+my_card <- function(...) {
+  withTags(
+    div(
+      class = "card",
+      div(
+        class = "card-body",
+        h5(class = "card-title", "Card title"),
+        p(class = "card-text", "Card content"),
+        button(
+          type = "button",
+          class = "btn btn-primary",
+          "Button"
+        )
+      )
+    )
+  )
 }
-
-shinyApp(ui, server)
 ```
 
-![green_button](image/)
+## Checking the result {-}
 
-However, this is considered an anti-pattern.
 
-## Why is in-line CSS an anti-pattern
+![](image/04-handle-html-dependencies/02-card-without-dependencies.png)
+![](image/04-handle-html-dependencies/03-using-bootstrap-3-for-card.png)
 
-Although this list is surely not comprehensive (jump in and add new examples if/when you please!)
+## Finding dependencies {-}
 
-* Our UI is rapidly going to grow and be hard to keep track of
+We need to import the _Material Design for Bootstrap_ dependency, to make that we have 2 alternatives:
 
-* We're mixing HTML, CSS and R code in the same document.
+- Defining the needed styles in local file in the `www/`.
+- Use a content delivery network (CDN) like [cdnjs](https://cdnjs.com/), where we can find [mdb-ui-kit](https://cdnjs.com/libraries/mdb-ui-kit).
 
-* We'll end up repeating ourselves, a lot (DRY).
+```r
+mdb_cdn <- "https://cdnjs.cloudflare.com/ajax/libs/"
+mdb_css <- paste0(mdb_cdn, "mdb-ui-kit/3.6.0/mdb.min.css")
+```
 
-* It's difficult for us to maintain (and we wrote it ) it's even harder for collaborators to join us in development.
+##  Adding a link on the head tag {-}
 
-## So what should we do?
+![](image/04-handle-html-dependencies/06-mdb-card-deps.png)
 
-Point to an external styles sheet, which re-styles elements from a central location, thus being easier to maintain and understand, and reducing bloat in our app's ui logic.
+```r
+fluidPage(
+  tags$head(
+    tags$link(
+      rel = "stylesheet",
+      type = "text/css",
+      href = mdb_css
+    )
+  )
+)
 
-We have three main choices:
+```
 
-the `includeCSS()` function
+![](image/04-handle-html-dependencies/05-using-link-tag.png)
 
-or following web development best practices:
+##  `includeCSS()` on the head tag {-}
 
-`tags$head(tags$link(rel = "stylesheet", type = "text/css", href = "custom.css"))`
+![](image/04-handle-html-dependencies/06-mdb-card-deps.png)
 
-The href could link to a Content Delivery Network, or a local css file, usually saved in www/
+```r 
+fluidPage(
+  tags$head(
+    includeCSS(path = mdb_css)
+  )
+)
+```
 
-'However, not easy to share this with over developers since there is no way to recover the specific dependency' 
+![](image/04-handle-html-dependencies/04-include-css-function.png)
 
-* Anyone able to jump in and go further on this - RE: recovering the specific dependency?
+## Using `htmlDependency()` {-}
 
-* Any thoughts on this, I've personally been using the external styles sheet similar to the 'custom.css' approach here and thought it was the right thing to do, so this is interesting and new!
+It has the advantage of adding the dependency in the header with its __name__ and __version__.
 
-The recommended approach is to use the `htmlDepedency()` and `attachDepdencies()`
+![](image/04-handle-html-dependencies/07-missing-dependency-name.png)
 
-## Use htmltools
+## Using `htmlDependency()` {-}
 
-The recommended approach is to use the `htmlDepedency()` and `attachDepdencies()`
+Main parameters:
 
-* A *name.*
-* A *version* (useful to remember on which version it is built upon).
-* A *path* to the dependency (can be a CDN or a local folder). 
-* *script and stylesheet* to respectively pass css and scripts
+- A __name__.
+- A __version__ (useful to remember on which version it is built upon).
+- A __path__ to the dependency (can be a CDN or a local folder).
+- __script__ and __stylesheet__ to respectively pass css and scripts.
 
-An example from the book:
-```{r, eval = FALSE}
+```r
 # handle dependency
 mdb_cdn <- "https://cdnjs.cloudflare.com/ajax/libs/"
 mdb_card_dep <- function() {
@@ -147,52 +140,73 @@ mdb_card_dep <- function() {
 }
 ```
 
-Note, that if not using a CDN and using local files, crucial to wrap the newly created dependency in a function, since the path has to be determined *at run time* and *not when the package builds*.
+> It is __crucial to wrap the created dependency in a function__ since the path has to be determined at __run time__ and not when the package builds.
 
-I won't include the my_card full code as we'd bloat the slides up quite a bit, see the book for the full example and code to run.
+## Using `htmlDependency()` {-}
 
-However, the story is not complete, because we haven't guaranteed that the styling we have just added takes precedence over Shiny's existing dependencies. 
+Then we just need to the created element and the dependency into  `tagList()` function.
 
-The order of execution is important here. If our styling is executed before a conflicting stylesheet, our styling will be overridden. As the book states:
+```r
+my_card_with_deps <- function(...) {
+  
+  cardTag <- my_card(...)
 
-"Under the hood, Shiny adds many necessary dependencies like Bootstrap and jQuery, and you have no control over where your own dependencies will be inserted..."
+  tagList(cardTag, mdb_card_dep())
 
-## Import additional HTML dependencies
+}
+```
 
-Let's say we were used to using {shinydashboard} and we want to implement a box component *without* the dashboard layout. If we don't specifically include the requisite dependency from {shinydashboard}, nothing will displace because shiny does not natively have a dependency on {shinydashboard}.
+> __Now we can share our element in a package__.
 
-We can use {htmltools} and the `findDependencies()` function.
-The function looks for all dependencies attached to a tag.
+## `htmlDependency()` disanvantage {-}
+
+The dependency was added but in the **wrong place** (before bootstrap).
+
+![](image/04-handle-html-dependencies/08-dependency-name-added.png)
+
+## Extracting web dependencies {-}
+
+__box tag__ won't work since __shiny__ does not have __shinydashboard__ dependencies
+
+`htmltools::findDependencies()` that looks for all dependencies attached to a tag. 
+
 
 ```{r, message=FALSE}
 library(shinydashboard)
-library(htmltools)
 dashboard_ui <- dashboardPage(
   dashboardHeader(),
   dashboardSidebar(),
   dashboardBody()
 )
 
+library(htmltools)
 dashboard_deps <- findDependencies(dashboard_ui)
-dashboard_deps[[1]]
+
+sapply(dashboard_deps, \(x) paste0(x$name, ": ", x$version))
 ```
 
-There are 3 other dependencies trimmed for space (see book!)
+## font-awesome {-}
 
-We can attach the depedencies to our own dashboard-box-generating funtion:
-```{r, eval = FALSE}
+It handles icons.
+
+```{r message=TRUE}
+print(dashboard_deps[[2]])
+```
+
+## Using extracted web dependencies {-}
+
+Now we can add the dependencies with the element to we want to use but using the `fluidPage()` function.
+
+```r
 my_dashboard_box <- function(title, status) {
   tagList(
     box(title = title, status = status), 
     dashboard_deps
   )
 }
-```
 
-and then we could call it in a dummy app like follows:
-```{r, eval = FALSE}
 library(shiny)
-library(OSUICode)
+library(shinydashboard)
 
 ui <- fluidPage(
   tags$style("body { background-color: gainsboro; }"),
@@ -203,19 +217,17 @@ server <- function(input, output) {}
 shinyApp(ui, server)
 ```
 
-## Suppress Dependencies
+![](image/04-handle-html-dependencies/09-shiny-import-box.png)
 
-Let's say we have a conflict and we can't run one of our packages as well as bootstrap - we'd need to remove the bootstrap dependency that ships with Shiny.
+## Suppress Dependencies {-}
 
-How?
+If we have a conflict we can use `suppressDependencies()` as an element of the __body tag__.
 
-using the `suppressDependencies()` function from {htmtools} of course! But first, we need to know which dependencies to remove.
+![](image/04-handle-html-dependencies/10-bootstrap-dependency.png)
 
-![removing_bootstrap](image/04_04_bootstrap_dependency.png)
+## Removing AdminLTE {-}
 
-Book example of removing the AdminLTE dependency from shinydashboard:
-
-```{r, eval = FALSE}
+```r
 library(shiny)
 library(shinydashboard)
 
@@ -230,9 +242,10 @@ shinyApp(
 )
 ```
 
-## Resolve Dependencies
+## Removing redundant dependencies {-}
 
-Imagine a situation in which we would like to use the very last version of Font Awesome icons, which is currently 5.15.1 according to jsdelivr. We recall that shiny already provides version 5.13.0 through the icon() function. Including another version would probably cause conflicts, and we would like to avoid that case. {htmltools} has a `resolveDependencies()` tool that removes any redundant dependencies, keeping the dependency with the higher version if names are identical:
+If want to update the **last version** of Font Awesome icons (from 5.15.1 to 6.4.2)
+
 
 ```{r}
 jsdelivr_cdn <- "https://cdn.jsdelivr.net/npm/@fortawesome/"
@@ -250,6 +263,44 @@ icon_deps <- list(
 )
 
 resolveDependencies(icon_deps)
+```
+
+## Insert custom script in the head {-}
+
+To embed dynamic user scripts in a dependency.
+
+```{r}
+options <- list(
+  sidebarExpandOnHover = TRUE,
+  boxWidgetSelectors = list(
+    remove = '[data-widget="remove"]'
+  )
+)
+
+config_script <- function(options) {
+  htmlDependency(
+    "options",
+    as.character(utils::packageVersion("shinydashboardPlus")),
+    src = c(file = system.file(
+      "shinydashboardPlus-2.0.0",
+      package = "shinydashboardPlus")
+    ),
+    head = if (!is.null(options)) {
+      paste0(
+        "<script>var AdminLTEOptions = ",
+        jsonlite::toJSON(
+          options,
+          auto_unbox = TRUE,
+          pretty = TRUE
+        ),
+        ";</script>"
+      )
+    }
+  )
+}
+
+# show the script
+print(HTML(config_script(options)$head))
 ```
 
 
